tests/NormalTests/paczka1/fuzzy1/71860269.err
Error in line 4: 5B5Wb A0 30,2
Error in line 5: 5B5Wb A0 40,8
Error in line 6: ZZ0SJ83 A362 67,4
Error in line 3: 5B5Wb A32 60,4
Error in line 13: 5B5Wb A0 28,3
Error in line 14: 5B5Wb A0 108,4
Error in line 20: 7Lh A0 69,4
Error in line 21: ?A0
Error in line 19: ZZ0SJ83 A32 7,3
Error in line 23: 7Lh A0 15,3
Error in line 18: vlMjw2dNV S921 37,4
Error in line 30: zt3JszD¼mNt A32 49,6
